created production build

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cytonn-covidapi-challenge",
+  "name": "covidapi-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
